[project]
name = "TeslaDashcam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ffmpeg-progress-yield>=0.12.0",
    "pyside6>=6.9.0",
]

[dependency-groups]
dev = [
    "flake8>=7.2.0",
]

[tool.ruff]
target-version = "py310"
extend-exclude = ["notebooks"]
lint.extend-select = ["E501"]
line-length = 120

[tool.flake8]
exclude = [".venv", "notebooks"]
max-line-length = 120
